fix: imclin cleanup