@@ -6,12 +6,8 @@ import lang24.data.imc.code.stmt.*;
 import lang24.data.imc.visitor.ImcVisitor;
 import lang24.data.mem.MemTemp;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Vector;
-
-/*
-    TODO: if ESTMT, first depth doesn't do move
- */
 
 public class StmtCanonizer implements ImcVisitor<Vector<ImcStmt>, Object> {
 
@@ -27,19 +23,19 @@ public class StmtCanonizer implements ImcVisitor<Vector<ImcStmt>, Object> {
     @Override
     public Vector<ImcStmt> visit(ImcESTMT eStmt, Object visArg) {
         Vector<ImcStmt> stmts = new Vector<>();
-        stmts.add(new ImcESTMT(eStmt.expr.accept(new ExprCanonizer(true), stmts)));
+        stmts.add(new ImcESTMT(eStmt.expr.accept(new ExprCanonizer(), stmts)));
 
         return stmts;
     }
 
     @Override
     public Vector<ImcStmt> visit(ImcJUMP jump, Object visArg) {
-        return new Vector<>(Arrays.asList(new ImcJUMP(jump.label)));
+        return new Vector<>(List.of(new ImcJUMP(jump.label)));
     }
 
     @Override
     public Vector<ImcStmt> visit(ImcLABEL label, Object visArg) {
-        return new Vector<>(Arrays.asList(new ImcLABEL(label.label)));
+        return new Vector<>(List.of(new ImcLABEL(label.label)));
     }
 
     @Override
@@ -48,19 +44,16 @@ public class StmtCanonizer implements ImcVisitor<Vector<ImcStmt>, Object> {
         MemTemp dstTemp = new MemTemp();
 
         if (move.dst instanceof ImcMEM) {
-            // Save address
             stmts.add(new ImcMOVE(
                     new ImcTEMP(dstTemp),
                     ((ImcMEM) move.dst.accept(new ExprCanonizer(), stmts)).addr
             ));
 
-            // Store to memory address
             stmts.add(new ImcMOVE(
                     new ImcMEM(new ImcTEMP(dstTemp)),
                     move.src.accept(new ExprCanonizer(), stmts)
             ));
         } else if (move.dst instanceof ImcTEMP) {
-            // Store in temp
             stmts.add(new ImcMOVE(
                     move.dst.accept(new ExprCanonizer(), stmts),
                     move.src.accept(new ExprCanonizer(), stmts)
@@ -73,8 +66,8 @@ public class StmtCanonizer implements ImcVisitor<Vector<ImcStmt>, Object> {
     @Override
     public Vector<ImcStmt> visit(ImcSTMTS stmts, Object visArg) {
         Vector<ImcStmt> imcStmts = new Vector<>();
-        for(ImcStmt stmt : stmts.stmts) {
-            imcStmts.addAll(stmt.accept(this,null));
+        for (ImcStmt stmt : stmts.stmts) {
+            imcStmts.addAll(stmt.accept(this, null));
         }
 
         return imcStmts;
@@ -83,6 +76,6 @@ public class StmtCanonizer implements ImcVisitor<Vector<ImcStmt>, Object> {
     @Override
     public Vector<ImcStmt> visit(ImcVectStmt imcVectStmt, Object accArg) {
         // TODO: Here vectorization code will sit
-        return imcVectStmt.stmts.accept(this,accArg);
+        return imcVectStmt.stmts.accept(this, accArg);
     }
 }
